# MidiRework

./: .gitmodules  CMakeLists.txt  CMakePresets.json
include/Midi/: MidiDevice.h  MidiManager.h  types.h
include/Utility/: Debouncer.h  Timer.h
src/: main.cpp
src/Midi/: MidiDevice.cpp  MidiManager.cpp
src/Utility/: Timer.cpp
